--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,8 @@ spring:
       name: user
       password: 1234
 
-server:
-  port: 8080
+jpa:
+  hibernate:
+    ddl-auto: update
+    show-sql: true
+    format_sql : true
